--- a/index.html
+++ b/index.html
@@ -7,5 +7,33 @@
 </head>
 <body>
 
+	<div class="hero-banner">
+
+	</div>
+	
+	<nav>
+		
+	</nav>
+	
+	<div class="more-info">
+		
+	</div>
+	<div class="sep"></div>
+	<div class="story"></div>
+
+	<div class="sep"></div>
+	<img src="img/gang.png" width="735" height="399" alt="The Gang">
+	<footer>
+		
+	</footer>
+
+	<div class="popup">
+		<div class="blanket"></div>
+		<div class="content">
+			<button class="close"></button>
+		</div>
+	</div>
+
+
 </body>
 </html>
