Styled hero banner

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<title>The gang</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<!-- Body aka were the content is -->
 <body>
-
+	<!-- Big blue banner -->
 	<div class="hero-banner">
+		
 		<div class="wrapper">
 			<h4>Marie from <a href="https://taptapkaboom.com">Tap Tap Kaboom</a> presents</h4>
 			<h1>The Silliest &amp; <br>
@@ -18,11 +18,13 @@
 			They are best friends.</h3>
 			<a class="cta alt" href="#more-info">Read More</a>
 		</div>
+
+		<div class= "character3"></div>	
+		<div class= "character2"></div>
+		<div class= "character1"></div>
 	</div>
-		<div class= "caracter1"></div>	
-		<div class= "caracter2"></div>
-		<div class= "caracter3"></div>
-<!-- navigation bar after blue banner -->
+	<!-- navigation bar after blue banner -->
+
 <nav>
 		<a href="#" class="logo">The Gang</a>
 	<ul>
