story section and footer styling
added HTML changed some CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="hero-banner">
 		
 		<div class="wrapper">
-			<h4>Marie Kathriner presents</h4>
+			<h4>Marie presents</h4>
 			<h1>The Silliest &amp; <br>
 			Most Awesome Gang <br>
 			In The World! </h1>
@@ -24,7 +24,7 @@
 		<div class= "character1"></div>
 	</div>
 	<!-- navigation bar after blue banner -->
-<div id="more-info">
+<div id="more-info"></div>
 <nav>
 		<a href="#" class="logo">The Gang</a>
 	<ul>
@@ -43,29 +43,33 @@
 </div>
 	<div class="sep"></div>
 	<div class="story" id="story">
-		<ul class="nb-list">
-			<li class="blue">Rock 'n roll</li>
-			<li class="grey">&nbsp;</li>
-			<li class=" yellow dragging">Laughter</li>
-			<li class="red">Square Offs</li>
-			<li class="pink">Circuitous Routes</li>
-			<li class="salmon">Trigonometry</li>
-			<li class="blue">Rad Hats</li>
-			<li class="yellow">Being Silly</li>
-		</ul>
+		<div class="wrapper">
+			<ul class="nb-list">
+				<li class="blue">Rock 'n roll</li>
+				<li class="grey">&nbsp;</li>
+				<li class=" yellow dragging">Laughter</li>
+				<li class="red">Square Offs</li>
+				<li class="pink">Circuitous Routes</li>
+				<li class="salmon">Trigonometry</li>
+				<li class="blue">Rad Hats</li>
+				<li class="yellow">Being Silly</li>
+			</ul>
 
-		<h3>Left: Things We Find Important<br>
-			Below: Our Story</h3>
-			<p>Once upon a time there was a group of shapes. They were mostly black and rectangular. They were mean and very serious</p>
-			<p>And so they kicked the 3 shapes that didn´t conform out of their gang, wich was called the Right Angeld Gang.</p> 
-			<p>And so these 3 shapes were very sad, but found great joy and comfort being around each other. They soon started having a lot of fun, started rocking and rolling, started being silly, and became the most well known shape gang in the universe.</p>
-
+				<h3>Left: Things We Find Important<br>
+				Below: Our Story
+				</h3>
+				<p>Once upon a time there was a group of shapes. They were mostly black and rectangular. They were mean and very serious</p>
+				<p>And so they kicked the 3 shapes that didn´t conform out of their gang, wich was called the Right Angeld Gang.</p> 
+				<p>And so these 3 shapes were very sad, but found great joy and comfort being around each other. They soon started having a lot of fun, started rocking and rolling, started being silly, and became the most well known shape gang in the universe.</p>
+		</div>
 	</div>
 
 	<div class="sep"></div>
-	<img src="img/the-gang.png" width="735" height="399" alt="The Gang">
+	<img class="gang-img" src="img/the-gang.png" width="735" height="399" alt="The Gang">
 	<footer>
+		<div class="wrapper">
 		Made by Marie in a <a href="https://taptapkaboom.com">Tap Tap Kaboom</a> class.
+		</div>
 	</footer>
 <!-- Popup with sign up thing -->
 	<div class="popup">
