--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<button class="cta" onclick="showPopup();">Sign Me Up!</button>
 	</div>
 </div>
-	<div class="sep"></button>
+	<div class="sep"></div>
 	<div class="story" id="story">
 		<div class="wrapper">
 			<ul class="nb-list">
@@ -54,7 +54,6 @@
 				<li class="blue">Rad Hats</li>
 				<li class="yellow">Being Silly</li>
 			</ul>
-
 				<h3>Left: Things We Find Important<br>
 				Below: Our Story
 				</h3>
@@ -65,7 +64,8 @@
 	</div>
 
 	<div class="sep"></div>
-	<img class="gang-img" src="img/the-gang.png" width="735" height="399" alt="The Gang">
+-->
+	<img class="gang-img" src="img/the-gang.png" alt="The Gang">
 	<footer>
 		<div class="wrapper">
 		Made by Marie in a <a href="https://taptapkaboom.com">Tap Tap Kaboom</a> class.
